Fix logout button being covered on group show page

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -58,7 +58,7 @@
   position: absolute;
   margin-top: 50px;
   /* margin-right: 1px; */
-  /* z-index: 1; */
+  z-index: 1;
 }
 
 /* .email {
@@ -67,6 +67,7 @@
 
 .logout {
   width: 100%;
+  border-radius: 10px;
 }
 
 .default1 {
